// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas <GitExpertApp /> debe de crear un snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas <GitExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon ball"
      indx={0}
      key="Dragon ball"
    />
    <GifGrid
      category="Ultrainstinto"
      indx={1}
      key="Ultrainstinto"
    />
  </ol>
</Fragment>
`;
